ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: my-app.local  
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /app(/|$)(.*)
        backend:
          service:
            name: app-service  
            port:
              number: 5555
      - pathType: ImplementationSpecific
        path: /phpmyadmin(/|$)(.*)
        backend:
          service:
            name: phpmyadmin-service 
            port:
              number: 55550
      - pathType: ImplementationSpecific
        path: /alpine(/|$)(.*)
        backend:
          service:
            name: alpine-service 
            port:
              number: 80
